[package]
name = "qwreey-utility-rs"
version = "0.1.6"
edition = "2021"
authors = ["Qwreey <me@qwreey.moe>"]
description = "Qwreey's shared rust codes"
repository = "https://github.com/qwreey/qwreey-utility-rs"
license = "MIT"

[dependencies]
mlua = { version = "0.11.2", optional = true }

[features]
default = [ "mlua-luau" ]
mlua-luau = [ "dep:mlua", "mlua/luau", "mlua/async" ]
mlua-send = [ "mlua/send" ]

[lib]
path = "src/lib.rs"
