[package]
name = "qwreey-utility-rs"
version = "0.1.7"
edition = "2021"
authors = ["Qwreey <me@qwreey.moe>"]
description = "Qwreey's shared rust codes"
repository = "https://github.com/qwreey/qwreey-utility-rs"
license = "MIT"

[dependencies]
mlua = { version = "0.11.3", optional = true }

[features]
mlua-luau = [ "dep:mlua", "mlua/luau", "mlua/async" ]
mlua-send = [ "mlua/send" ]

[lib]
path = "src/lib.rs"
